--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,10 +85,17 @@ body {
 }
 
 /* styles/globals.css */
-body,html, a, button {
+body,html, a, button{
   cursor: none;
 }
 *{
   overflow: hidden;
 }
-
+@media screen and (max-width: 767px) {
+  body, html, a, button {
+    cursor: none;
+  }
+  .custom-slide-button {
+    display: none;
+  }
+}
